--- a/frequency_controlers/controllers_1.ipynb
+++ b/frequency_controlers/controllers_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projeto de controladores na frequencia \n",
+    "# Projeto de controladores na frequencia - Parte 1\n",
     "\n",
     "[Slides da aula](https://marofe.github.io/controle-digital/2024/aula6.html)\n",
     "\n",
