--- a/frequency_controlers/controllers_2.ipynb
+++ b/frequency_controlers/controllers_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projeto de controladores na frequencia - parte 2\n",
+    "# Projeto de controladores na frequencia - Parte 2\n",
     "\n",
     "[Slides da aula](https://marofe.github.io/controle-digital/2024/aula7.html)"
    ]
